# openlayers

./: CMakeLists.txt  README  fr_FR.qm  fr_FR.ts  openlayers.pro  openlayers_layer.py  openlayers_ovwidget.py  openlayers_plugin.py  resources.py  resources_tr.qrc
html/: OpenLayers-2.8.js
html/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository  Root
